@@ -6,6 +6,10 @@ Devel::NYTProf::Changes - List of significant changes to Devel::NYTProf
 
 =head2 Changes in Devel::NYTProf 2.11
 
+XXX sysops needs docs and more ops
+
+  Fixed (rare) overflow bug for 32bit perls.
+  Fixed discarding of (rare) negative intervals.
   Fixed risk of infinite recursion if trace enabled and
     $SIG{__WARN__} was set to a code reference.
   Fixed recursion depth measurement.
@@ -18,8 +22,8 @@ Devel::NYTProf::Changes - List of significant changes to Devel::NYTProf
   Added sysops=1 option which enables profiling of perl opcodes
     that make potentially slow system calls. They appear as xsubs
     in the current package with names prefixed by "CORE:".
-XXX needs docs and more ops
 
+  Added log=F option to write trace log to a file.
   Added columns to the main source code reports to show
     a count of sub calls and time spent in those calls.
 
